k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenai-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenai-app
  template:
    metadata:
      labels:
        app: jenai-app
    spec:
      containers:
        - name: jenai-app
          image: jenai-app:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8501
