k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenai-service
spec:
  type: ClusterIP
  selector:
    app: jenai-app
  ports:
    - port: 80
      targetPort: 8501
